[tool.poetry]
name = "euanh-website"
version = "0.1.0"
description = ""
authors = ["EuanHoll <ehollidge@hotmail.com>"]
readme = "README.md"
packages = [{include = "euanh_website"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
