[tool.poetry]
name = "euanh-website"
version = "0.1.0"
description = ""
authors = ["EuanHoll <ehollidge@hotmail.com>"]
readme = "README.md"
packages = [{include = "euanh_website"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
pytailwindcss = "^0.2.0"
pydantic = "^2.5.2"
sqlalchemy = "^2.0.23"
sqladmin = {extras = ["full"], version = "^0.16.0"}
uvicorn = "^0.24.0.post1"
bcrypt = "^4.1.2"
pytz = "^2023.3.post1"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
